# copyparty

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix  pyoxidizer.bzl  pyproject.toml  setup.py
.github/: branch-rename.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  something-else.md
abanadoned/: browser.js
contrib/: README.md  cfssl.sh  copyparty.bat  explorer-nothumbs-nofoldertypes.reg  flameshot.sh  index.html  media-osd-bgone.ps1  send-to-cpp.contextlet.json  sharex-html.sxcu  sharex.sxcu  sharex12.sxcu  webdav-basicauth.reg  webdav-cfg.bat  webdav-unlimit.bat
contrib/apache/: copyparty.conf
contrib/ios/: upload-to-copyparty.shortcut
contrib/nginx/: copyparty.conf
contrib/nixos/modules/: copyparty.nix
contrib/openrc/: copyparty
contrib/package/arch/: PKGBUILD  copyparty.conf  copyparty.service  index.md  (+1 more)
contrib/plugins/: README.md  banner.js  browser.css  meadup.js  minimal-up2k.html  minimal-up2k.js  rave.js  up2k-hook-ytid.js  up2k-hooks.js
contrib/rc/: copyparty
contrib/systemd/: cfssl.service  copyparty.conf  copyparty.service  prisonparty.service
contrib/themes/: bsod.css
contrib/windows/: copyparty-ctmp.bat
copyparty/: __init__.py  __main__.py  __version__.py  authsrv.py  broker_mp.py  broker_mpw.py  broker_thr.py  broker_util.py  cert.py  cfg.py  dxml.py  fsutil.py  ftpd.py  httpcli.py  httpconn.py  httpsrv.py  ico.py  mdns.py  metrics.py  mpsrv.py  msgsvc.py  mtag.py  multicast.py  pwhash.py  smbd.py  ssdp.py  star.py  sutil.py  svchub.py  szip.py  tcpsrv.py  tftpd.py  th_cli.py  th_srv.py  u2idx.py  up2k.py  util.py  vcr.py
copyparty/bos/: bos.py  path.py
copyparty/mods/: audio-bpm.py  audio-key.py
copyparty/res/: insecure.pem
copyparty/stolen/: qrcodegen.py  surrogateescape.py
copyparty/web/: Makefile  baguettebox.js  browser.css  browser.html  browser.js  browser2.html  cf.html  dbg-audio.js  md.css  md.html  md.js  md2.css  md2.js  mde.css  mde.html  mde.js  msg.css  msg.html  shares.css  shares.html  shares.js  splash.css  splash.html  splash.js  svcs.html  svcs.js  ui.css  up2k.js  upload.css  upload.html  util.js  w.hash.js
docs/: README.md  TODO.md  biquad.html  browser-icons.css  browser.css  bufsize.txt  changelog.md  design.txt  devnotes.md  example.conf  example2.conf  hls.html  idp.md  lics.txt  minimal-up2k.html  mistakes.py  multisearch.html  music-analysis.sh  notes.bat  notes.md  notes.sh  nuitka.txt  pretend-youre-qnap.patch  protocol-reference.sh  pyoxidizer.txt  rclone.md  tcp-debug.sh  unirange.py  up2k.txt  versus.md  xff.md
docs/copyparty.d/: some.conf
docs/cursed-usecases/: README.md
docs/examples/: README.md  windows.md
docs/rice/: README.md
scripts/: copyparty-android.sh  copyparty-repack.sh  fusefuzz.py  genlic.sh  help2html.py  help2txt.sh  install-githooks.sh  logpack.sh  make-pypi-release.bat  make-pypi-release.sh  make-pyz.sh  make-sfx.sh  make-tgz-release.sh  make-unix-sfx.sh  prep.sh  profile.py  rls.sh  run-tests.sh  sfx.ls  sfx.py  sfx.sh  speedtest-fs.py  tl.js  tl.py  tlcheck.sh  toc.sh  uncomment.py  ziploader.py
scripts/bench/: filehash.sh
scripts/deps-docker/: Dockerfile  Makefile  brotli.makefile  busy-mp3.sh  codemirror.patch  easymde-ln.patch  easymde-marked6.patch  easymde.patch  forge.patch  genprism.py  genprism.sh  markdown-it.patch  marked-ln.patch  marked.patch  mini-fa.css  mini-fa.sh  shiftbase.py  showdown.patch  zopfli.makefile
scripts/docker/: Dockerfile.ac  Dockerfile.dj  Dockerfile.djd  Dockerfile.djf  Dockerfile.djff  Dockerfile.dju  Dockerfile.im  Dockerfile.iv  Dockerfile.min  Dockerfile.min.pip  Makefile  README.md  devnotes.md  innvikler.sh  make.sh
scripts/pyinstaller/: README.md  build.sh  depchk.sh  deps.sha512  deps.txt  ffmpeg.patch  ffmpeg.txt  icon.sh  loader.py  loader.rc  notes.txt  up2k.rc  up2k.sh  up2k.spec  up2k.spec.sh
scripts/strip_hints/: a.py
scripts/test/: ptrav.py  race.py  smoketest.py  tftp.sh
srv/: ceditable.html  chat.md  extend.md  test.md
srv/expand/: README.md
tests/: ptrav.py  run.py  test_dedup.py  test_dots.py  test_dxml.py  test_hooks.py  test_httpcli.py  test_idp.py  test_metrics.py  test_mv.py  test_utils.py  test_vfs.py  util.py
(+44 files in other folders)
